-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 11.0.2
-
None
-
Arch Linux
Valgrind 3.21.0
-
-
7268f036d (master)
When running a program that has a realloc() call of size 0, the following error is reported: Memcheck: Error occurred parsing Valgrind output: Unknown memcheck error kind "ReallocSizeZero"
After this error, parsing of output ceases and all Valgrind output goes to the output console, and can quickly exceed the output buffer.
I encountered this within the NVIDIA OpenGL and Vulkan libraries, meaning that trying to track a memory error in a graphical application is guaranteed to trigger it on some systems.
- relates to
-
QTCREATORBUG-31376 Valgrind parser memcheck Error "invalidSize"
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-29600 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 503227,2 | Valgrind: Add missing error type | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |