Valgrind: Add missing error type

Fixes: QTCREATORBUG-29600
Change-Id: Ia6b6549865f9940f2e93fbe998788d201a3550fa
Reviewed-by: hjk <hjk@qt.io>